# filemanager1

./: Cargo.toml  LICENSE  Makefile  README.md
assets/: filemanager1.service  org.freedesktop.FileManager1.service
src/: main.rs
