[package]
name = "filemanager1"
version = "0.1.5"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
vipera = "0.2"
zbus = "5.14.0"
notify-rust = "4"
urlencoding = "2.1.3"
itertools = "0.14.0"
